cmake_minimum_required(VERSION 3.28)
project(PACMAN LANGUAGES CXX)
set(CMAKE_CXX_FLAGS "-Wall")
set(CMAKE_CXX_STANDARD 14)
add_subdirectory(SRC)
install(TARGETS PACMAN DESTINATION bin)
if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
    set (CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/installed" CACHE PATH "default install path" FORCE)
endif()